Updated pages and made site mobile responsive

--- a/about.html
+++ b/about.html
@@ -18,16 +18,60 @@
   </nav>
 
   <main>
-    <section>
-      <h2>Who We Are</h2>
-      <p>We are a professional team committed to delivering top-quality services in web design, marketing, and consulting. Our mission is to help businesses grow and thrive online.</p>
-    </section>
+  <section>
+    <h2>Who We Are</h2>
+   <p>My Business was founded to help small and medium-sized businesses succeed in the digital world. We focus on providing affordable and effective solutions.since the beginning of the anglophone crises, many anglophones have been facing a ot of difficulties . with our enterprise , farmers will have easy access to funding for their their farming activities. the general manager dr SENGLA NELSON is a very generous man and he is willing to help indiscriminately</p>
+    <img src="https://source.unsplash.com/600x300/?team,people" alt="Our team" class="feature-image" />
+  </section>
 
-    <section>
-      <h2>Our Vision</h2>
-      <p>To be a trusted partner in digital success for small and medium-sized enterprises across the globe.</p>
-    </section>
-  </main>
+  <section>
+    <h2>Why Choose Us?</h2>
+    <ul>
+      <li>Professional team with years of experience</li>
+      <li>Affordable pricing</li>
+      <li>Excellent customer support</li>
+      <li>A stable support team</li>
+      <li>agricultural funding scheme</li>
+
+       <section>
+      <h2>Empowering Northwest Farmers with Agricultural Vision</h2>
+      <p>As a dynamic entrepreneur with a strong business acumen, holding a prestigious Business Degree from the University of Johannesburg, South Africa, I, Segla Nelson, have dedicated my efforts to transforming the agricultural landscape of the Northwest Region of Cameroon. Through strategic investments and sustainable initiatives, my projects aim to uplift small-scale farmers, boost food security, and drive economic growth in rural communities.
+Revolutionizing Farming Through Funding and Innovation
+
+Recognizing the untapped potential of the Northwest’s fertile lands, I have committed over 50 million FCFA to empower local farmers in key areas:
+
+    Ndop – Rice Cultivation Hub: By providing high-quality seeds, modern farming equipment, and expert training, my initiative has revitalized rice production in Ndop, turning it into a thriving agricultural zone. Farmers now enjoy increased yields and access to profitable markets.
+
+    Banso – Bean Farming Expansion: In Banso, my project supports bean farmers with funding, improved seedlings, and storage facilities, ensuring better post-harvest handling and higher income for local families.
+
+    Bafut & Bamenda – Potato Farming Revolution: Potato farming has been given a major boost through my interventions, including irrigation support, pest control solutions, and partnerships with agro-processing firms to add value to harvests.
+
+A Commitment to Sustainable Growth
+
+Beyond immediate financial support, my projects emphasize education, sustainability, and technology. I have organized workshops on modern farming techniques, introduced climate-smart practices, and facilitated access to loans for farmers to expand their operations. My vision is to create a self-sufficient agricultural ecosystem where farmers no longer struggle with funding but thrive as agribusiness owners.
+Future Expectations: Scaling Up for Greater Impact
+
+The journey has only begun. With the success of these initial projects, I plan to:
+
+    Expand funding to reach 5,000+ farmers across the Northwest.
+
+    Introduce agro-processing plants to reduce post-harvest losses and increase profitability.
+
+    Launch an agricultural cooperative to ensure fair pricing and collective bargaining power for farmers.
+
+    Partner with international investors to bring in advanced farming technologies.
+
+Agriculture is the backbone of Cameroon’s economy, and through my unwavering commitment, I am determined to make the Northwest Region a model of agricultural excellence. My mission is not just to invest money but to build futures, empower communities, and cultivate prosperity—one farm at a time.
+
+Segla Nelson
+Entrepreneur | Agricultural Innovator | Business Strategist
+University of Johannesburg Alumnus
+Investing in Cameroon’s Agricultural Future</p>
+
+    </ul>
+    <a href="index.html" class="btn">← Back to Home</a>
+  </section>
+</main>
 
   <footer>
     <p>© 2025 My Business</p>
