--- a/index.html
+++ b/index.html
@@ -13,29 +13,39 @@
   <p>Quality Services for You</p>
 </header>
 
-<nav>
-  <a href="#home">Home</a>
-  <a href="#services">Services</a>
-  <a href="#contact">Contact</a>
+<nav class="navbar">
+  <a href="index.html">Home</a>
   <a href="about.html">About</a>
+  <a href="application.html">Apply</a>
+  <a href="projects.html">Projects</a>
+  <a href="testimonials.html">Testimonials</a>
 </nav>
+
 
 <main>
   <section id="home">
-    <h2>Welcome</h2>
-    <p>We offer professional services that help your business grow.</p>
+    <h2>Welcome to My Business</h2>
+    <p>We help small businesses grow online by creating powerful websites and offering expert marketing strategies.</p>
+    <a href="about.html" class="btn">Learn more about us →</a>
   </section>
-  </main><section>
-  <h2>Our Services</h2>
-  <ul>
-    <li>Website Design</li>
-    <li>Digital Marketing</li>
-    <li>Consulting</li>
-  </ul>
-</section>
 
-<section>   contact   
-  <h2>Contact Us</h2>
+  <section id="services">
+    <h2>Our Services</h2>
+    <ul>
+      <li>Website Design</li>
+      <li>Social Media Management</li>
+      <li>Business Consulting</li>
+    </ul>
+    <img src="https://source.unsplash.com/600x300/?office,teamwork" alt="Team at work" class="feature-image" />
+  </section>
+
+  <section id="contact">
+    <h2>Contact Us</h2>
+    <p>Email us at: <a href="mailto:billnelson625@gmail.com">billnelson625@gmail.com</a></p>
+    <p>Call: +237 672 70 60 75</p>
+  </section>
+</main>
+
   <form>
     <label for="name">Name:</label><br />
     <input type="text" id="name" name="name" required /><br /><br />
@@ -54,8 +64,6 @@
     <p>© 2025 My Business</p>
   </footer>
 </body>
-
-
 
 </html>
 
