Force GitHub Pages rebuild

--- a/projects.html
+++ b/projects.html
@@ -1,44 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Projects - Sponsored Farms</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
-    <img src="https://source.unsplash.com/100x100/?agriculture" alt="Logo" class="logo" />
+    <img src="https://source.unsplash.com/100x100/?agriculture" alt="Logo" class="logo">
     <h1>Sponsored Farming Projects</h1>
     <p>Discover some farms we’ve helped grow and expand</p>
   </header>
 
   <nav class="navbar">
-  <a href="index.html">Home</a>
-  <a href="about.html">About</a>
-  <a href="application.html">Apply</a>
-  <a href="projects.html">Projects</a>
-  <a href="testimonials.html">Testimonials</a>
-</nav>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="application.html">Apply</a>
+    <a href="projects.html">Projects</a>
+    <a href="testimonials.html">Testimonials</a>
+  </nav>
 
   <main>
     <section>
       <h2>Recent Projects</h2>
 
       <div class="project">
-        <img src="https://source.unsplash.com/400x200/?cassava,field" alt="Cassava Farm" />
+        <img src="https://source.unsplash.com/400x200/?cassava,field" alt="Cassava Farm">
         <h3>Cassava Farm - Bafut</h3>
         <p>Sponsored 200,000 FCFA to help cultivate 5 hectares. Yield improved by 65% in 6 months.</p>
       </div>
 
       <div class="project">
-        <img src="https://source.unsplash.com/400x200/?plantain,plantation" alt="Plantain Plantation" />
+        <img src="https://source.unsplash.com/400x200/?plantain,plantation" alt="Plantain Plantation">
         <h3>Plantain Plantation - Mamfe</h3>
         <p>A young farmer received support to start a plantation. Now serving 3 communities.</p>
       </div>
 
       <div class="project">
-        <img src="https://source.unsplash.com/400x200/?poultry" alt="Poultry Farm" />
+        <img src="https://source.unsplash.com/400x200/?poultry" alt="Poultry Farm">
         <h3>Poultry - Bamenda</h3>
         <p>We helped establish a poultry business with over 500 birds and steady monthly income.</p>
       </div>
@@ -46,7 +46,7 @@
   </main>
 
   <footer>
-    <p>© 2025 My Business | Growing Together</p>
+    <p>&copy; 2025 My Business | Growing Together</p>
   </footer>
 </body>
 </html>
