--- a/application.html
+++ b/application.html
@@ -24,44 +24,38 @@
   <main>
     <section>
       <h2>Eligibility Application Form</h2>
-      <form>
-        <label for="fullname">Full Name:</label><br>
-        <input type="text" id="fullname" name="fullname" required><br><br>
+       <form action="http://127.0.0.1:5001/booking" method="POST">
 
-        <label for="email">Email Address:</label><br>
-        <input type="email" id="email" name="email" required><br><br>
+              <h1> Book A Tour </h1>               
+              <article class="name-email">
+                  <div>
+                      <input type="text" id="your-name" name="name" required />
+                      <label for="your-name"> Your Name </label>
+                  </div>
+                  <div>
+                      <input type="email" id="email" name="email" required />
+                      <label for="email"> Your Email </label>
+                  </div>
+              </article>
+              <article class="date-des">
+                  <div>
+                      <input id="dat" type="date" name="date" required />
+                      
+                      <label for="date"> date </label>
+                  </div>
+                  <div>
+                      <input id="time" type="time-local" name="time" required />
+                      <label for="time">local time </label>
+                  </div>
+                  <div>
 
-        <label for="phone">Phone Number:</label><br>
-        <input type="tel" id="phone" name="phone" required><br><br>
-
-        <label for="location">Farm Location (Village/Town, Region):</label><br>
-        <input type="text" id="location" name="location" required><br><br>
-
-        <label for="project">Type of Farming Project:</label><br>
-        <select id="project" name="project" required>
-          <option value="">--Select--</option>
-          <option value="plantain">Plantain Plantation</option>
-          <option value="cassava">Cassava Farm</option>
-          <option value="poultry">Poultry (Chicken)</option>
-          <option value="fish">Fish Farming</option>
-          <option value="other">Other</option>
-        </select><br><br>
-
-        <label for="experience">Do you have any farming experience?</label><br>
-        <select id="experience" name="experience" required>
-          <option value="">--Select--</option>
-          <option value="yes">Yes</option>
-          <option value="no">No</option>
-        </select><br><br>
-
-        <label for="funds">How much funding are you requesting (in FCFA)?</label><br>
-        <input type="number" id="funds" name="funds" min="10000" required><br><br>
-
-        <label for="details">Describe your farm idea and why we should sponsor you:</label><br>
-        <textarea id="details" name="details" rows="5" required></textarea><br><br>
-
-        <button type="submit">Submit Application</button>
-      </form>
+              </article>
+              <figure>
+                  <textarea id="Special" name="special_request" rows="2" required></textarea>
+                  <label for="Special"> Special request : </label>
+              </figure>
+              <button> Book Now </button>
+          </form>
     </section>
   </main>
 
